Fix spacing between list items

--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -64,3 +64,7 @@ ul {
   padding: 0;
   margin: 0;
 }
+
+li {
+  margin: 0 0 16px 0;
+}
